@@ -1,6 +1,11 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Thu Aug 30 2012 Thunor <thunorsif@hotmail.com>
+- Fixed an issue with hiding/showing widgets that are automatically
+  wrapped inside a scrolled window or viewport inside a scrolled window
+  not hiding/showing those additional components.
+
 * Wed Aug 29 2012 Thunor <thunorsif@hotmail.com>
 - Added listing of the built-in extra libraries to argument --version.
 - Fixed working_directory not being initialised to NULL in terminal.
